# workflow-pathoscope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc  Cargo.toml  Dockerfile  README.md  _pathoscope.py  docker-compose.yml  fixtures.py  pathoscope.py  pyproject.toml  setup.py  tox.ini  utils.py  workflow.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  debug.yml  dockerhub.yml  publish.yml
TestFiles/: to_isolates.sam
python/workflow_pathoscope/: __init__.py  rust.pyi  utils.py
src/: lib.rs
tests/: Dockerfile  conftest.py  fixtures.py  path_fixtures.py  subtracted_read_ids.txt  test_pathoscope.py  test_utils.py  test_workflow.py
tests/__snapshots__/: test_utils.ambr  test_workflow.ambr
tests/snapshots/: snap_test_workflow.py
tests/test_files/: isolate_high_scores.json  to_subtraction.sam
tests/test_pathoscope/: test_build_matrix.yml  test_compute_best_hit.yml  test_em_10_1e_06_1e_05_0_.yml  test_em_10_1e_06_1e_05_1e_05_.yml  test_em_10_1e_07_1e_05_0_.yml  test_em_10_1e_08_1e_05_0_.yml  test_em_20_1e_06_0_1e_05_.yml  test_em_20_1e_07_0_1e_05_.yml  test_em_20_1e_07_1e_05_1e_05_.yml  test_em_30_1e_06_0_0_.yml  test_em_30_1e_07_0_0_.yml  test_em_30_1e_08_0_0_.yml  test_em_30_1e_08_0_1e_05_.yml  test_em_5_1e_08_1e_05_1e_05_.yml
tests/test_utils/: report_input.json
tests/test_workflow/: test_map_isolates.yml  test_map_subtraction.yml  test_pathoscope.yml  test_pathoscopetsv  test_subtract_mapping.txt
utils/eliminate_subtraction/: Cargo.toml  output.sam  subtracted_read_ids.txt
utils/eliminate_subtraction/src/: main.rs
utils/expectation_maximization/: Cargo.toml
utils/expectation_maximization/TestFiles/: rewrite.sam
utils/expectation_maximization/src/: lib.rs
virtool_workflow_pathoscope/: _pathoscope.py  fixtures.py  workflow.py
