[tool.poetry]
name = "workflow-pathoscope"
version = "0.0.0"
description = ""
authors = [
    "Ian Boyes",
    "Blake Smith",
    "Mallory Loria",
    "Lilly Roberts",
    "Markus Swoveland"
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
virtool-workflow = "^6.0.0"
setuptools = "^70.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.7.0"
syrupy = "^1.7.4"
maturin = "^1.5.1"
ruff = "^0.4.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "workflow_pathoscope.rust"
features = ["pyo3/extension-module"]