[project]
name = "workflow-pathoscope"
version = "0.0.0"
description = ""
authors = [
    {name="Ian Boyes"},
    {name="Blake Smith"},
    {name="Mallory Loria"},
    {name="Lilly Roberts"},
    {name="Markus Swoveland"},
]
license = "MIT"
requires-python = ">=3.12.3,<3.13.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
virtool-workflow = { git = "https://github.com/virtool/virtool-workflow.git", rev="7.1.4" }

[tool.poetry.group.dev.dependencies]
maturin = "^1.8.7"
pytest = "^7.4.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.1"
ruff = "^0.11.13"
syrupy = "^1.7.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "workflow_pathoscope.rust"
features = ["pyo3/extension-module"]